--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@ Fork the repo from here <a href= "https://github.com/MozLNMIIT/mozlnmiit.github.
     <table>
       <tr>
         <td>1</td>
-        <td>Sagar Chand Agarwal</td>
+        <td>Shruti Sharma</td>
+        <td><a href="mailto:atomsagar@gmail.com">atomsagar@gmail.com</a>
+      </tr>
+	 <tr>
+        <td>1</td>
+        <td>xyz</td>
         <td><a href="mailto:atomsagar@gmail.com">atomsagar@gmail.com</a>
       </tr>
     </table>
