--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ Fork the repo from here <a href= "https://github.com/MozLNMIIT/mozlnmiit.github.
     <table>
       <tr>
         <td>1</td>
-        <td>Sagar Chand Agarwal</td>
-        <td><a href="mailto:atomsagar@gmail.com">atomsagar@gmail.com</a>
+        <td>Shruti Sharma</td>
+        <td><a href="mailto:shrutishrm512@gmail.com">shrutishrm512@gmail.com</a>
       </tr>
     </table>
   </p>
